[gd_scene load_steps=7 format=3 uid="uid://bcrh1wqigo3cp"]

[ext_resource type="Script" uid="uid://dh5cgc605okx4" path="res://sliders.gd" id="1_b5mpp"]
[ext_resource type="Shader" uid="uid://c3nl56f6e6vms" path="res://scenes/sliders.gdshader" id="2_rs1x6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_um5f7"]
shader = ExtResource("2_rs1x6")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_rs1x6"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.738]
}

[sub_resource type="Animation" id="Animation_um5f7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_elpo3"]
_data = {
&"RESET": SubResource("Animation_um5f7"),
&"blur": SubResource("Animation_rs1x6")
}

[node name="Sliders" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5mpp")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_um5f7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -484.0
offset_top = -267.0
offset_right = 484.0
offset_bottom = 267.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Volume_Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = " Mute"

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_elpo3")
}

[connection signal="value_changed" from="PanelContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_toggled"]
